--- a/daikoku/javascript/src/style/components/notification.scss
+++ b/daikoku/javascript/src/style/components/notification.scss
@@ -71,6 +71,7 @@ $level1-darken-color: color-mix(in srgb, variables.$level2_bg-color 95%, #000);
   flex-direction: column;
   border-radius: 5px;
   overflow: hidden;
+  border: 1px solid color-mix(in srgb, variables.$level3_bg-color 90%, #000);
 
   background-color: variables.$level2_bg-color;
   color: variables.$level2_text-color;
@@ -90,10 +91,11 @@ $level1-darken-color: color-mix(in srgb, variables.$level2_bg-color 95%, #000);
   }
 
   .select-all-row {
-    background-color: $level1-darken-color;
+    background-color: variables.$level2_bg-color;
     padding: 1rem 1rem !important;
     font-size: 1rem !important;
     height: 4rem;
+    // border: none !important;
 
     // input.form-check-input {
     //   margin-left: .7rem!important;
@@ -103,10 +105,14 @@ $level1-darken-color: color-mix(in srgb, variables.$level2_bg-color 95%, #000);
   .table-rows {
     display: flex;
     flex-direction: column;
-    background-color: variables.$level3_bg-color;
-    color: variables.$level3_text-color;
+    background-color: variables.$level1_bg-color;
+    color: variables.$level1_text-color;
     padding: 0;
     margin: 0;
+
+    li:last-of-type .table-row {
+        border: none;
+      }
   }
 
   .table-row {
@@ -115,7 +121,7 @@ $level1-darken-color: color-mix(in srgb, variables.$level2_bg-color 95%, #000);
     gap: 1rem;
     padding: .875rem 1rem;
     align-items: center;
-    border-bottom: 1px solid variables.$level1_bg-color;
+    border-bottom: 1px solid color-mix(in srgb, variables.$level3_bg-color 90%, #000);
     font-size: 0.875rem;
 
     &:hover {
@@ -219,9 +225,9 @@ $level1-darken-color: color-mix(in srgb, variables.$level2_bg-color 95%, #000);
     }
   }
 
-  .table-row:last-of-type {
-    border: none;
-  }
+  // .table-row:last-of-type {
+  //   border: none;
+  // }
 
 }
 
