--- a/daikoku/javascript/src/style/layout/home.scss
+++ b/daikoku/javascript/src/style/layout/home.scss
@@ -34,7 +34,7 @@ $tile_border_color: color-mix(in srgb, $tile_background_color 70%, #000);
     button {
       background: none;
       border: none;
-      color: $tile_background_color;
+      color: variables.$primary-color;
       width: 30px;
       height: 30px;
       border-radius: 4px;
@@ -43,8 +43,8 @@ $tile_border_color: color-mix(in srgb, $tile_background_color 70%, #000);
       justify-content: center;
 
       &:hover {
-        background-color: $tile_background_color;
-        color: #fff;
+        // background-color: orange;
+        color: variables.$level1_link-hover-color;
       }
     }
 
@@ -55,14 +55,14 @@ $tile_border_color: color-mix(in srgb, $tile_background_color 70%, #000);
       margin-bottom: 5px;
 
       .icon {
-        background-color: $tile_background_color;
+        background-color: color-mix(in srgb, variables.$primary-color 30%, #fff);
         border-radius: 4px;
         display: flex;
         align-items: center;
         justify-content: center;
         width: 30px;
         height: 30px;
-        color: $tile_border_color;
+        color: variables.$primary-color;
       }
 
       h3 {
@@ -73,7 +73,7 @@ $tile_border_color: color-mix(in srgb, $tile_background_color 70%, #000);
 
     .description {
       font-size: 12px;
-      color: color-mix(in srgb, $tile_text_color 50%, #fff);
+      color: $tile_text_color;
     }
 
 
@@ -89,7 +89,7 @@ $tile_border_color: color-mix(in srgb, $tile_background_color 70%, #000);
 
       .data__value {
         font-size: 30px;
-        color: #000;
+        color: $tile_text_color;
       }
     }
   }
