--- a/daikoku/public/themes/default.css
+++ b/daikoku/public/themes/default.css
@@ -1,15 +1,15 @@
 :root {
-  --body_bg-color: #f1f3f6;
-  --body_text-color: #8a8a8a;
-  --body_link-color: #4c4c4d;
-  --body_link-hover-color: orange;
+  --level1_bg-color: #fff;
+  --level1_text-color: #626262;
+  --level1_link-color: #626262;
+  --level1_link-hover-color: orange;
 
-  --level2_bg-color: #e5e7ea;
-  --level2_text-color: #4c4c4d;
+  --level2_bg-color: #F9F9F9;
+  --level2_text-color: #1E1E1E;
   --level2_link-color: #605c5c;
-  --level2_link-hover-color: #000;
+  --level2_link-hover-color: #1E1E1E;
 
-  --level3_bg-color: #fff;
+  --level3_bg-color: #EEEEEE;
   --level3_text-color: #222;
   --level3_link-color: #4c4c4d;
   --level3_link-hover-color: #000;
@@ -55,14 +55,16 @@
   --success-color: #65B741;
   --warning-color: #ffc107;
   --danger-color: #dc3545;
-  --neutral-color: #4e5760
+  --neutral-color: #4e5760;
+
+  --primary-color: #29438D;
 }
 
 :root[data-theme="DARK"] {
-  --body_bg-color: #000;
-  --body_text-color: #b3b3b3;
-  --body_link-color: #b3b3b3;
-  --body_link-hover-color: orange;
+  --level1_bg-color: #000;
+  --level1_text-color: #b3b3b3;
+  --level1_link-color: #b3b3b3;
+  --level1_link-hover-color: orange;
 
   --level2_bg-color: #121212;
   --level2_text-color: #b3b3b3;
@@ -115,5 +117,7 @@
   --success-color: #65B741;
   --warning-color: #ffc107;
   --danger-color: #dc3545;
-  --neutral-color: #4e5760
+  --neutral-color: #4e5760;
+
+  --primary-color: orange;
 }
