--- a/daikoku/javascript/src/style/layout/home.scss
+++ b/daikoku/javascript/src/style/layout/home.scss
@@ -31,21 +31,24 @@ $tile_border_color: color-mix(in srgb, $tile_background_color 80%, #000);
     padding-bottom: 15px;
     margin-bottom: 15px;
 
-    button {
+    &.tile__header-action {
       background: none;
       border: none;
-      color: variables.$primary-color;
-      width: 30px;
-      height: 30px;
-      border-radius: 4px;
+      border-bottom: 1px solid $tile_border_color;
+      color: $tile_text_color;
+      width: 100%;
+      // height: 30px;
+      border-radius: 4px 4px 0 0;
       display: flex;
       align-items: center;
       justify-content: center;
+      box-sizing: border-box;
 
       &:hover {
-        // background-color: orange;
-        color: variables.$level1_link-hover-color;
+        color: variables.$primary-color;
+        background-color: color-mix(in srgb, variables.$primary-color 30%, #fff);
       }
+
     }
 
 
