Add some css for better UX/UI

--- a/daikoku/javascript/src/style/main.scss
+++ b/daikoku/javascript/src/style/main.scss
@@ -43,3 +43,4 @@
 @use 'components/apiSubscription.scss';
 @use 'components/pricingCard.scss';
 @use 'components/dashboard.scss';
+@use 'components/informations.scss';
