--- a/daikoku/javascript/src/style/components/avatarWithAction.scss
+++ b/daikoku/javascript/src/style/components/avatarWithAction.scss
@@ -6,9 +6,15 @@
     justify-content: center;
     border-radius: 50%;
 
-    color: variables.$sidebar-text-color;
+    color: variables.$level2_text-color;
     border: 2px solid variables.$sidebar-text-color;
     background-color: transparent;
+
+    &.on-modal {
+        border-color: variables.$level2_text-color;
+        height: 100px; width: 100px;
+        box-sizing: content-box;
+    }
 
     &:hover {
         color: variables.$sidebar-text-hover-color;
