FIX #922 - footer is now managed by cms

--- a/daikoku/javascript/src/style/layout/style.scss
+++ b/daikoku/javascript/src/style/layout/style.scss
@@ -218,7 +218,7 @@ img:hover+.changePicture, .avatar-without-img:hover+.changePicture,
 
 .wrapper:not(.information-container) {
   height: calc(100vh - variables.$topbar-height);
-  overflow: visible;
+  overflow: scroll;
 
   margin-top: 50px;
 }
