writes playwright test to test oids connection add new process for oids logout add usage of roles to determine if user from oidc is admin, user or not allowed add redirection to informations page if user is not allowed

--- a/daikoku/javascript/src/style/layout/style.scss
+++ b/daikoku/javascript/src/style/layout/style.scss
@@ -103,7 +103,7 @@ hr {
 }
 
 .user-logo {
-  background-color: white;
+  background-color: variables.$sidebar-text-color !important;
 }
 
 .fa-xxs {
